--- a/index.html
+++ b/index.html
@@ -7,15 +7,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <button></button>
-    <button></button>
-    <button></button>
-    <button></button>
-    <button></button>
-    <button></button>
-    <button></button>
-    <button></button>
-    <button></button>
+    <h2 class="turn"></h2>
+    <div class="game">
+        <div class="rows">
+            <button class="cell" data-index="1"></button>
+            <button class="cell" data-index=" 2"></button>
+            <button class="cell" data-index=" 3"></button>
+        </div>
+        <div class="rows">
+            <button class="cell" data-index=" 4"></button>
+            <button class="cell" data-index="5"></button>
+            <button class="cell" data-index=" 6"></button>
+        </div>
+        <div class="rows">
+            <button class="cell" data-index=" 7"></button>
+            <button class="cell" data-index=" 8"></button>
+            <button class="cell" data-index=" 9"></button>
+        </div>
+    </div>
+    <h2 class="result"></h2>
+    <button class="reset">Reset</button>
     <script src="script.js"></script>
 </body>
 </html>
